[package]
name = "dstructs"
version = "0.1.0"
edition = "2024"
authors = ["Adiao Zhou <mzhou7626@gmail.com>"]
description = "A collection of high-performance data structures for Rust"
license = "MIT"
repository = "https://github.com/Adiao1973/dstructs"
homepage = "https://github.com/Adiao1973/dstructs"
documentation = "https://docs.rs/dstructs"
readme = "README.md"
keywords = ["data-structures", "collections", "performance", "concurrent"]
categories = ["data-structures", "concurrency"]
exclude = ["target/", ".git/", ".gitignore", "examples/", "benches/", "tests/"]

[lib]
name = "dstructs"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
# 核心依赖
thiserror = "2.0"   # 错误处理
log = "0.4"         # 日志支持
env_logger = "0.11" # 日志实现

# 并发支持
crossbeam = "0.8"    # 无锁数据结构
parking_lot = "0.12" # 高效锁实现

# 性能优化
smallvec = "1.11"  # 小数组优化
hashbrown = "0.15" # 高性能哈希表

# 新增依赖
dashmap = "5.5"
num_cpus = "1.16"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"   # 在嵌入式环境中避免使用展开
